# nncli

./: .buildinfo  .readthedocs.yaml  CHANGELOG.rst  CHANGELOG.txt  CNAME  CONTRIBUTING.rst  Makefile  README.rst  changelog.html  configuration.html  contributing.html  genindex.html  index.html  nncli-cat.1.html  nncli-create.1.html  nncli-delete.1.html  nncli-dump.1.html  nncli-edit.1.html  nncli-export.1.html  nncli-favorite.1.html  nncli-import.1.html  nncli-list.1.html  nncli-sync.1.html  nncli.1.html  nncli.config.5.html  objects.inv  pyproject.toml  requirements-dev.txt  requirements.txt  search.html  searchindex.js  sitemap.xml  usage.html
.github/: dependabot.yml
.github/workflows/: codeql.yml  lint.yml  release.yml
_sources/: index.rst.txt
docs/source/: conf.py  index.rst  nncli.config.5.rst
nncli/: cli.py  nncli.py
src/nncli/: __init__.py
