[build-system]
requires = ["flit_core>=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "nncli"
authors = [
	{name = "Daniel Moch", email = "daniel@danielmoch.com"},
]
readme = "README.rst"
requires-python = ">=3"
classifiers = [
	"License :: OSI Approved :: MIT License",
	"Development Status :: 4 - Beta",
	"Environment :: Console :: Curses",
	"Intended Audience :: End Users/Desktop",
	"License :: OSI Approved :: MIT License",
	"Programming Language :: Python :: 3 :: Only",
]
dependencies = [
	"urwid",
	"requests",
	"appdirs",
	"click",
]
dynamic = [ "version", "description" ]

[project.urls]
Homepage = "https://nncli.org"
"Source Code" = "https://git.danielmoch.com/nncli"

[project.optional-dependencies]
dev = [
	"pip-tools",
	"pytest>=5.2,<5.3",
	"pytest-cov",
	"pytest-mock",
	"pylint",
	"pudb",
	"sphinx",
	"flit",
	"setuptools",
	"mock",
	"tox",
	"pathlib2; python_version < '3.5'",
	"scandir; python_version < '3.5'",
	"vulture",
	"sphinx-rtd-theme",
	"sphinx-sitemap",
]
doc = [
	"sphinx",
]

[project.scripts]
nncli = "nncli.cli:main"
